fikse JDK versjon
endre pom slik at javaversjon stemmer overens med metoder på gammel MAC